# musicbrainz-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_TEST_RESULTS.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.1.0.md  SMITHERY_CLI_TEST_RESULTS.md  SMITHERY_DEPLOYMENT_FIXES.md  SMITHERY_DEPLOYMENT_TROUBLESHOOTING.md  SMITHERY_TESTING_GUIDE.md  config.example.json  docker-compose.yml  error.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  smithery.yaml  test_direct_tools.py  test_musicbrainz_queries.py  test_server_startup.py
.github/: copilot-instructions.md
docs/: CLIENT_TESTING.md  TEST_RESULTS.md  api_reference.md  configuration.md  deployment.md  error.txt  examples.md  mkdocs.yml
examples/: README.md  advanced_integration.py  basic_usage.py
scripts/: smithery_smoke.py  test_mcp_curl.sh  test_smithery_mcp_protocol.py
src/musicbrainz_mcp/: __init__.py  __main__.py  config.py  exceptions.py  models.py  musicbrainz_client.py  schemas.py  server.py  tools.py  utils.py
tests/: conftest.py  mock_data.py  test_client.py  test_integration.py  test_models.py  test_server.py  test_utils.py
